// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecoverPasswordPage.styles BotaoEnviar DEVE ser igual ao snapshot 1`] = `
.c0 {
  margin: 15px;
}

.c1 {
  min-width: 200px;
  background-color: #6495ED;
  border-radius: 8px;
  border: none;
  padding: 8px 60px;
  cursor: pointer;
}

<div
  className="c0"
  data-testid="bnt-pardao"
>
  <button
    className="c1"
    data-testid="bnt-pardao-button"
    type="submit"
  />
</div>
`;

exports[`RecoverPasswordPage.styles ContainerBotaoRecuperaSenha DEVE ser igual ao snapshot 1`] = `
.c0 {
  background-color: transparent;
  border: none;
  cursor: pointer;
}

<button
  className="c0"
/>
`;

exports[`RecoverPasswordPage.styles ContainerDireita DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
/>
`;

exports[`RecoverPasswordPage.styles ContainerEsquerda DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  height: 100%;
  background-color: #0000CD;
}

<div
  className="c0"
/>
`;

exports[`RecoverPasswordPage.styles ContainerTitulo DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  gap: 24px;
}

<div
  className="c0"
/>
`;

exports[`RecoverPasswordPage.styles Form DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 400px;
  padding: 20px;
  gap: 8px;
  border-color: #000000;
}

<form
  className="c0"
/>
`;

exports[`RecoverPasswordPage.styles Main DEVE ser igual ao snapshot 1`] = `
.c0 {
  width: 100vw;
  height: 100vh;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #D3D3d3;
}

<main
  className="c0"
/>
`;

exports[`RecoverPasswordPage.styles TextoBotao DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 18px;
  font-family: AvertaStd-Regular;
  color: #FFFFFF;
  margin-top: 0px;
  text-transform: uppercase;
  line-height: 26px;
  cursor: pointer;
}

<h2
  className="c0 "
  cursor="pointer"
/>
`;

exports[`RecoverPasswordPage.styles TextoRecuperarSenha DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 18px;
  font-family: AvertaStd-Regular;
  color: #000000;
  margin-top: 0px;
  text-transform: uppercase;
  line-height: 26px;
  cursor: pointer;
}

<h2
  className="c0 "
  cursor="pointer"
/>
`;

exports[`RecoverPasswordPage.styles TextoSubtitulo DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 12px;
  font-family: AvertaStd-Regular;
  color: #000000;
  margin-top: 0px;
  text-transform: none;
  line-height: 18px;
  cursor: text;
}

<h5
  className="c0 "
/>
`;

exports[`RecoverPasswordPage.styles TextoTitulo DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 18px;
  font-family: AvertaStd-Bold;
  color: #000000;
  margin-top: 0px;
  text-transform: none;
  line-height: 26px;
  cursor: text;
}

<h2
  className="c0 "
/>
`;
